--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
       <h5> Tu mensaje procesado es.. </h5>
 
       <p id = "boxResult"></p>
+      <p id = "boxResult2"></p>
 
       <!--<textarea class ="mensajesss" id = "boxResult" rows="8" cols ="150"></textarea> -->  <!----cambiaste la clase te tuu texarea-->
       <input id="volver2" type="button" value="Volver2">
